source/blender/blenkernel/BKE_blender.h
@@ -45,7 +45,7 @@ extern "C" {
 #define BLENDER_SUBVERSION      5
 /* Several breakages with 270, e.g. constraint deg vs rad */
 #define BLENDER_MINVERSION      270
-#define BLENDER_MINSUBVERSION   5
+#define BLENDER_MINSUBVERSION   6
 
 /* used by packaging tools */
 /* can be left blank, otherwise a,b,c... etc with no quotes */
